// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-cta/Button renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 18,
          "lineHeight": 22,
        },
        Array [
          Object {
            "color": "#FFF",
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#F54D3D",
          "fontFamily": "Inter-Bold",
          "fontSize": 18,
          "lineHeight": 22,
        },
        Array [
          Object {
            "color": "#FFF",
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly fixed 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly loading 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly secondary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 32,
      "opacity": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 6,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 32,
      "opacity": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 6,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="20"
      width="20"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly tertiary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 48,
      "opacity": 1,
      "paddingHorizontal": 32,
      "paddingVertical": 12,
    }
  }
/>
`;
